fix(server): right align SCIM base URL

--- a/server/assets/app/css/pages/authentication_settings.css
+++ b/server/assets/app/css/pages/authentication_settings.css
@@ -104,7 +104,7 @@
         align-items: center;
 
         & > [data-part="field"] {
-          align-items: flex-start;
+          align-items: flex-end;
         }
 
         & [data-part="read-only-value"] {
